# spam-detection-project

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  check_version.py  logger_config.py  requirements.txt  setup.cfg  setup.py  trainer.py
.github/: dependabot.yml  labeler.yml  release-drafter.yml
.github/workflows/: publish.yml  tests.yml
classifier/: __init__.py  base_classifier.py  classifier_types.py  naive_bayes_classifier.py  random_forest_classifier.py  svm_classifier.py
loading_and_processing/: __init__.py  data_loader.py
models/bayes/: naive_bayes_vectoriser.pkl
models/random_forest/: random_forest_vectoriser.pkl
prediction/: __init__.py  predict.py
spam_detection/: __init__.py  trainer.py
spam_detection/classifiers/: base_classifier.py  classifier_types.py  naive_bayes_classifier.py  random_forest_classifier.py  svm_classifier.py
spam_detection/loading_and_processing/: __init__.py
spam_detection/models/bayes/: naive_bayes_model.pkl  naive_bayes_vectoriser.pkl
spam_detection/models/svm/: svm_model.pkl  svm_vectoriser.pkl
spam_detection/prediction/: predict.py
spam_detection/test_and_tuning/: fine_tuning_svm.py  test.py
spam_detection/training/: train_models.py
spam_detector/: __init__.py  trainer.py
spam_detector/classifiers/: __init__.py  base_classifier.py  classifier_types.py  naive_bayes_classifier.py  random_forest_classifier.py  svm_classifier.py
spam_detector/loading_and_processing/: __init__.py
spam_detector/prediction/: predict.py
spam_detector/test_and_tuning/: fine_tuning_svm.py  test.py
spam_detector/training/: __init__.py  train_models.py
spam_detector_ai/: __info__.py  __init__.py  logger_config.py  trainer.py
spam_detector_ai/classifiers/: __init__.py  base_classifier.py  classifier_map.py  classifier_types.py  logistic_regression_classifier.py  naive_bayes_classifier.py  random_forest_classifier.py  svm_classifier.py  xgb_classifier.py
spam_detector_ai/loading_and_processing/: __init__.py  data_loader.py  preprocessor.py
spam_detector_ai/models/: test.py
spam_detector_ai/models/bayes/: naive_bayes_model.joblib  naive_bayes_model.pkl  naive_bayes_vectoriser.joblib  naive_bayes_vectoriser.pkl
spam_detector_ai/models/logistic_regression/: logistic_regression_model.joblib
spam_detector_ai/models/random_forest/: random_forest_vectoriser.joblib  random_forest_vectoriser.pkl
spam_detector_ai/models/svm/: svm_model.joblib  svm_model.pkl  svm_vectoriser.joblib
spam_detector_ai/models/xgb/: xgb_model.joblib  xgb_model.json  xgb_vectoriser_label_encoder.joblib
spam_detector_ai/prediction/: __init__.py  performance.py  predict.py
spam_detector_ai/test_and_tuning/: __init__.py  fine_tuning_svm.py  py_test.py  test.py
spam_detector_ai/tests/: launcher.py  py_test.py  test.py  test_dataloader.py  test_preprocessor.py
spam_detector_ai/training/: __init__.py  train_models.py
spam_detector_ai/tuning/: fine_tuning_logistic_regression.py  fine_tuning_svm.py  fine_tuning_xgb.py
test_and_tuning/: __init__.py  fine_tuning_svm.py  test.py
training/: __init__.py  train_models.py
