[metadata]
license = Apache License 2.0
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Text Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
include_package_data = true
packages =
    spam_detector_ai
    spam_detector_ai.models
    spam_detector_ai.models.svm
    spam_detector_ai.models.bayes
    spam_detector_ai.models.random_forest
    spam_detector_ai.training
    spam_detector_ai.classifiers
    spam_detector_ai.loading_and_processing
    spam_detector_ai.prediction
    spam_detector_ai.test_and_tuning

python_requires = >=3.8
install_requires =
    scikit-learn
    pandas
    numpy
    pytest
    joblib

[options.package_data]
* = data/*
spam_detector_ai = models/*/*
