[metadata]
license = MIT
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Text Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
include_package_data = true
packages =
    spam_detector_ai
    spam_detector_ai.models
    spam_detector_ai.models.svm
    spam_detector_ai.models.bayes
    spam_detector_ai.models.random_forest
    spam_detector_ai.models.xgb
    spam_detector_ai.training
    spam_detector_ai.classifiers
    spam_detector_ai.loading_and_processing
    spam_detector_ai.prediction
    spam_detector_ai.tests
    spam_detector_ai.tuning

python_requires = >=3.8
install_requires =
    scikit-learn>=1.7.0,<2.0.0
    imbalanced-learn>=0.14.0,<0.15.0
    pandas>=2.3.0,<3.0.0
    nltk>=3.9.0,<4.0.0
    joblib>=1.5.0,<2.0.0
    xgboost>=3.1.0,<4.0.0
    numpy>=1.26.0,<3.0.0

[options.package_data]
* = data/*
spam_detector_ai = models/*/*
